Mon Feb 28 04:31:58 GMT 2005  Olly Betts <olly@survex.com>

	* matcher/weightcutoffpostlist.cc: Fix updating of docid in
	  WeightCutoffPostList - the current code works, but can end up doing
	  lots (potentially millions) of pointless loop iterations.

Mon Feb 28 02:57:29 GMT 2005  Olly Betts <olly@survex.com>

	* docs/queryparser.html: Note that + and - work on phrases and
	  bracketed expressions.

Fri Feb 25 17:06:23 GMT 2005  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_alltermslist.cc: Fix skip_to on an allterms
	  TermIterator to set the current term when the skip_to-ed term is
	  in the database.
	* tests/api_db.cc: Add regression test for this (allterms5).

Wed Feb 23 19:07:30 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Suppress 2 Intel C++ warnings which we can't easily
	  code around, and enable -Werror automatically with
	  --enable-maintainer-mode.
	* configure.ac: Check that the C++ compiler can actually link a
	  program.  AC_LANG_CXX doesn't, and if it can't find a C++ compiler
	  it'll just return "g++" which just leads to a later configure
	  test failing in a confusing way.

Tue Feb 22 13:39:07 GMT 2005  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Improved documentation comments.
	* api/omenquire.cc,include/xapian/enquire.h: MSet::max_size() (which
	  only exists so that MSet is an STL compiler) now returns
	  MSet::size() and is inlined from the header.
	* include/xapian/enquire.h: Added ESet::max_size() (for STL
	  compatibility).

Tue Feb 22 00:18:33 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: corrected "none known for yes" or "none known for no"
	  to "none known for g++-3.2" or similar.
	* configure.ac: autoconf identifies Intel's C++ compiler as GCC, so
	  probe for which it actually is.

Mon Feb 21 21:54:29 GMT 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Mon Feb 21 16:06:32 GMT 2005  Olly Betts <olly@survex.com>
