@@ -6,7 +6,7 @@ noinst_HEADERS = orpostlist.h andpostlist.h andnotpostlist.h \
  andmaybepostlist.h xorpostlist.h branchpostlist.h filterpostlist.h \
  phrasepostlist.h branchtermlist.h ortermlist.h selectpostlist.h \
  mergepostlist.h msetpostlist.h extraweightpostlist.h networkmatch.h \
- localmatch.h emptymatch.h weightcutoffpostlist.h biaspostlist.h
+ localmatch.h emptymatch.h biaspostlist.h
 
 noinst_LTLIBRARIES = libmatcher.la
 
@@ -21,5 +21,5 @@ libmatcher_la_SOURCES = orpostlist.cc andpostlist.cc andnotpostlist.cc \
  filterpostlist.cc ortermlist.cc expandweight.cc rset.cc \
  bm25weight.cc tradweight.cc \
  localmatch.cc multimatch.cc expand.cc stats.cc \
- mergepostlist.cc msetpostlist.cc weightcutoffpostlist.cc \
+ mergepostlist.cc msetpostlist.cc \
  $(SOURCEFORREMOTE)
